Now sending, receiving and showing pictures